# robox3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
csrc/: shim.c  shim.h
examples/: arm_sensors.py  arm_trajectory.py  falling_box.py  pendulum.py  viz_arm.py
examples/assets/: simple_arm.urdf
src/robox3d/: __init__.py  demo.py  math.py
src/robox3d/_ffi/: __init__.py  _cdef.py  _shim_cdef.py
src/robox3d/assets/: __init__.py
src/robox3d/assets/so101/: README.md
src/robox3d/control/: __init__.py
src/robox3d/core/: __init__.py  _log.py  batch.py  body.py  joints.py  world.py
src/robox3d/model/: __init__.py  geometry.py  urdf.py
src/robox3d/sensors/: __init__.py  contact.py  ft.py  imu.py  lidar.py
src/robox3d/viz/: __init__.py  protocol.py  record.py  server.py
tests/: conftest.py  test_batch.py  test_control.py  test_determinism.py  test_energy.py  test_joints.py  test_sensors.py  test_spring_chain.py  test_urdf.py  test_viz.py  test_world.py
tools/: build_viewer.py  gen_ffi.py  wheel_smoke.py
viewer/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
viewer/src/: App.tsx  AutoFrame.tsx  BodyMeshes.tsx  JointPanel.tsx  store.ts  types.ts
