[project]
name = "robox3d"
version = "0.1.0"
description = "Lightweight robot simulation on Box3D — URDF, sensors, control, and a browser-native viewer"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["robotics", "simulation", "physics", "urdf", "box3d", "robot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cffi>=2.0.0",
    "numpy>=1.24",
    "yourdfpy>=0.0.60",
]

[project.urls]
Repository = "https://github.com/neka-nat/robox3d"
Issues = "https://github.com/neka-nat/robox3d/issues"

[project.optional-dependencies]
coacd = ["coacd>=1.0.0"]
viz = [
    "websockets>=14.0",
]

[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/robox3d"]
build-dir = "build/skbuild"
cmake.version = ">=3.22"
# The bundled viewer build (tools/build_viewer.py) is gitignored but must ship
# in wheels/sdists.
sdist.include = ["src/robox3d/viz/static/**"]

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
# 32-bit targets (win32, linux i686): box3d uses 64-bit intrinsics and the
# dependency ecosystem (numpy, lxml, ...) no longer ships 32-bit wheels
skip = ["*-musllinux*", "*-win32", "*_i686"]
test-command = "python {project}/tools/wheel_smoke.py"
# The default manylinux2014 image (glibc 2.17) cannot install modern wheels of
# our transitive test dependencies (pillow, manifold3d, ... ship manylinux_2_28
# only) and falls back to source builds that fail. manylinux_2_28 still covers
# every mainstream distro (Ubuntu 20.04+, Debian 11+, RHEL 8+).
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "websockets>=14.0",
]
